@@ -24,9 +24,6 @@
 /* Define if you want to use a gnuplot history file with GNU readline. */
 /* #undef GNUPLOT_HISTORY */
 
-/* Define to allow 'fit' to create parameter error variables. */
-#define GP_FIT_ERRVARS 1
-
 /* Define if you want to use a newer version of libgrx under MSDOS/djgpp. */
 /* #undef GRX21 */
 
