@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.248.2.14 2010/03/07 00:50:12 sfeam Exp $
+dnl $Id: configure.in,v 1.248.2.15 2010/05/02 21:00:58 sfeam Exp $
 dnl
 dnl AC_INIT must match the release number
 AC_INIT(gnuplot, 4.4.0)
@@ -855,15 +855,6 @@ AC_ARG_ENABLE(mgr,dnl
        [-lpixrect])
    fi])
 
-dnl fitting error variables
-AC_ARG_ENABLE(fiterrvars,dnl
-[  --disable-fiterrvars    disable fitting error variables],,
-  [test -z "${enable_fiterrvars}" && enable_fiterrvars=yes])
-if test "$enable_fiterrvars" = yes; then
-  AC_DEFINE(GP_FIT_ERRVARS, 1,
-            [ Define to allow 'fit' to create parameter error variables. ])
-fi
-
 dnl Redwood Graphics Interface Protocol
 AC_ARG_ENABLE(rgip,dnl
 [  --enable-rgip           enable Redwood Graphics Interface Protocol],
@@ -1298,12 +1289,6 @@ if test "$enable_mouse" = yes; then
   AC_MSG_RESULT([  Mouse support in interactive terminals: yes])
 else
   AC_MSG_RESULT([  Mouse support in interactive terminals: no])
-fi
-
-if test "$enable_fiterrvars" = yes; then
-  AC_MSG_RESULT([  Fitting error variables: yes])
-else
-  AC_MSG_RESULT([  Fitting error variables: no])
 fi
 
 if test "$enable_volatile_data" = yes; then
