@@ -1,5 +1,5 @@
 /*
- * $Id: fit.h,v 1.12 2004/04/13 17:23:53 broeker Exp $
+ * $Id: fit.h,v 1.12.6.1 2010/05/02 21:00:58 sfeam Exp $
  */
 
 /* GNUPLOT - fit.h */
@@ -61,13 +61,7 @@
 
 extern char fitbuf[];
 extern char *fitlogfile;
-
-#ifdef GP_FIT_ERRVARS
-/* NEW 20030131: should we place parameter errors into user-defined
- * variables?  */
 extern TBOOLEAN fit_errorvariables;
-#endif /* GP_FIT_ERRVARS */
-
 
 /* Prototypes of functions exported by fit.c */
 
